--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -1,26 +1,22 @@
-.header {
-    text-align: center;
-    border-bottom: 1px solid gray;
-}
-
-.wrapper {
+.page {
     color: #6eff6e;
     margin: 0 auto;
     margin-top: 10px;
 }
 
+.header {
+    text-align: center;
+    border-bottom: 1px solid gray;
+}
+
 .chats {
     width: 100%;
     box-sizing: border-box;
-    border-radius: 12px;
     background-color: #2c2c2c;
     color: #fff;
-}
-
-.hiddenRow {
-    visibility: hidden;
-    height: 120px;
-    width: 100%;
+    max-height: calc(100vh - 160px);
+    overflow-y: auto;
+    padding: 10px;
 }
 
 .chats> :not(:last-child) {
@@ -47,7 +43,7 @@
     color: brown;
 }
 
-.inputsWrapper {
+.form {
     margin-top: 10px;
     display: flex;
     justify-content: center;
@@ -61,7 +57,7 @@
     width: 100%;
 }
 
-.input {
+.textarea {
     outline: none;
     border: none;
     display: block;
@@ -71,7 +67,7 @@
     border: 1px solid #555;
     border-radius: 4px;
     transition: border-color 0.3s ease;
-    height: 100%;
+    height: 20px;
     margin-right: 5px;
     background-color: #444;
     color: #fff;
